# actions-testpypi

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: linux.yml  publish.yml
.github/wortkflows/: linux.yml
src/ptheywoodtestpypi/: __main__.py  foo.py
